# sprk

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  README.md  TODO  configure.ac  project.xml
api/: sprk_block.xml  sprk_block_manager.xml  sprk_blockdata.xml  sprk_ctx.xml  sprk_dataset.xml  sprk_descriptor.xml  sprk_transform.xml
bindings/jni/: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
bindings/jni/android/: CMakeLists.txt  android_toolchain.cmake  build.sh
bindings/jni/msvc/: platform.h  resource.rc
bindings/jni/msvc/vs2010/: build.bat  call_javah.bat  sprk.sln
bindings/jni/msvc/vs2010/libsprkjni/: libsprkjni.props  libsprkjni.vcxproj  libsprkjni.vcxproj.filters
bindings/jni/msvc/vs2012/: build.bat  call_javah.bat  sprk.sln
bindings/jni/msvc/vs2012/libsprkjni/: libsprkjni.vcxproj  libsprkjni.vcxproj.filters
bindings/jni/msvc/vs2013/: build.bat  sprk.sln
bindings/jni/msvc/vs2013/libsprkjni/: libsprkjni.vcxproj
bindings/jni/msvc/vs2015/: build.bat  sprk.sln
bindings/jni/msvc/vs2015/libsprkjni/: libsprkjni.vcxproj
bindings/jni/src/main/c/: org_zeromq_sprk_Block.c  org_zeromq_sprk_Descriptor.c  org_zeromq_sprk_SprkCtx.c  org_zeromq_sprk_SprkDataset.c  org_zeromq_sprk_Transformation.c
bindings/jni/src/main/java/org/zeromq/sprk/: Block.java  Descriptor.java  SprkCtx.java  SprkDataset.java  Transformation.java
bindings/jni/src/test/java/org/zeromq/sprk/: BlockTest.java  DescriptorTest.java  SprkCtxTest.java  SprkDatasetTest.java  TransformationTest.java
doc/: Makefile.am  asciidoc.conf  sprk.txt
include/: sprk.h  (+9 more)
(+182 files in other folders)
